--- a/web_dynamic/0-hbnb.html
+++ b/web_dynamic/0-hbnb.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+	 <link rel="stylesheet" href="/static/styles.css?cache_id={{ cache_id }}">
+
+    <!-- Add cache_id to other assets similarly -->
+    <script src="/static/script.js?cache_id={{ cache_id }}"></script>
+
     <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css">
     <link rel="icon" href="../static/images/icon.png" />
+
+
     <title>HBnB</title>
   </head>
   <body>
